--- a/complete-react-appb-react-and-localStorage/src/App.css
+++ b/complete-react-appb-react-and-localStorage/src/App.css
@@ -5,6 +5,58 @@
   text-align: center;
 }
 
+.parent {
+  border: 2px solid red;
+  display: flex;
+  padding: 20px;
+  justify-content: space-between;
+}
+
+.compo_container {
+  border: 2px solid purple;
+  width: 65%;
+
+}
+
+.title {
+  font-size: 25px;
+}
+
+.cart_container {
+  border: 2px solid green;
+  width: 30%;
+}
+
+.compo_containe2 {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr );
+  gap:10px;
+  padding: 10px;
+}
+
+.compo1 {
+  padding: 10px;
+  border: 2px solid rgb(138, 236, 96);
+border-radius: 20px;
+
+
+}
+
+.compo1 img{
+  width: 100%;
+  border-radius: 10px;
+}
+.compo1 .parchaseBtn {
+  background-color: white;
+  color: black;
+}
+
+.compo1:hover{
+  transform: scale(1.05);
+ transition-duration:0.6s;
+ filter:drop-shadow( 0 0 5px rgb(187, 241, 187))
+}
+/* 
 .logo {
   height: 6em;
   padding: 1.5em;
@@ -39,4 +91,4 @@
 
 .read-the-docs {
   color: #888;
-}
+} */
