--- a/complete-react-appb-react-and-localStorage/src/App.css
+++ b/complete-react-appb-react-and-localStorage/src/App.css
@@ -56,6 +56,22 @@ border-radius: 20px;
  transition-duration:0.6s;
  filter:drop-shadow( 0 0 5px rgb(187, 241, 187))
 }
+
+.compo_btn_container{
+  display: flex;
+  justify-content: space-evenly;
+align-items: center;
+
+}
+.compo_btn_container :nth-child(1) {
+  font-size:14px;
+  background-color: rgb(186, 234, 234);
+  color:black;
+}
+.compo_btn_container button{
+  font-size: 15px;
+}
+
 /* 
 .logo {
   height: 6em;
